--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
@@ -219,13 +219,14 @@
                 <div class="row booking-confirm-container">
                     <div class="col-sm-6">
                         {% if order.status == 2 %}
-                            {#<p class="deposit-info"><b>Deposit:</b> ${ depositAmount } GBP received via secured payment <b class="non-refundable-info">(Non - refundable)</b></p>
-                            <p class="deposit-info"><b>Balance:</b> ${ depositBallance } GBP unpaid</p>#}
-                            <p class="deposit-info"><b>Deposit:</b> ${ depositToPay } GBP received via secured payment <b class="non-refundable-info">(Non - refundable)</b></p>
-                            <p class="deposit-info"><b>Balance:</b> ${ balanceToPay } GBP unpaid</p>
+                            <p class="deposit-info"><b>Deposit:</b> {{ order.depositAmount }} GBP received via secured payment <b class="non-refundable-info">(Non - refundable)</b></p>
+                            <p class="deposit-info"><b>Balance:</b> {{ order.depositBallance }} GBP unpaid</p>
+                        {% elseif order.status == 0 %}
+                            <p class="deposit-info"><b>Deposit:</b> 0 GBP will be paid <b class="non-refundable-info">(Non - refundable)</b></p>
+                            <p class="deposit-info"><b>Balance:</b> 0 GBP will left to pay</p>
                         {% else %}
-                        <p class="deposit-info"><b>Deposit:</b> ${ depositToPay } GBP will be paid <b class="non-refundable-info">(Non - refundable)</b></p>
-                        <p class="deposit-info"><b>Balance:</b> ${ balanceToPay } GBP will left to pay</p>
+                            <p class="deposit-info"><b>Deposit:</b> ${ depositToPay } GBP will be paid <b class="non-refundable-info">(Non - refundable)</b></p>
+                            <p class="deposit-info"><b>Balance:</b> ${ balanceToPay } GBP will left to pay</p>
                         {% endif %}
                     </div>
                     <div class="col-sm-6 booking-confirm-list no-pad">
@@ -318,7 +319,7 @@
                                 msg:"{{ chatMessage.messageText }}",
                                 send_date:"{{ chatMessage.timeFromGet }}",
                                 role:"{{ chatMessage.senderUser.roleName }}",
-                            {%  if chatMessage.senderUser.avatar is defined  %}
+                            {%  if chatMessage.senderUser.avatar is not null  %}
                                 avatar: "{{ chatMessage.senderUser.avatar }}",
                             {%  else %}
                                 avatar: "/assets/images/noAvatar.png",
