--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
@@ -319,10 +319,10 @@
                                 msg:"{{ chatMessage.messageText }}",
                                 send_date:"{{ chatMessage.timeFromGet }}",
                                 role:"{{ chatMessage.senderUser.roleName }}",
-                            {%  if chatMessage.senderUser.avatar is not null  %}
-                                avatar: "{{ chatMessage.senderUser.avatar }}",
-                            {%  else %}
+                            {%  if chatMessage.senderUser.avatar is empty  %}
                                 avatar: "/assets/images/noAvatar.png",
+                            {%  else %}
+                                avatar: "{{ chatMessage.senderUser.avatar }}",
                             {%  endif %}
                                 file: [
                                     {% for file in chatMessage.files %}
