fixed position of messages

--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
@@ -319,7 +319,7 @@
                                 msg:"{{ chatMessage.messageText }}",
                                 send_date:"{{ chatMessage.timeFromGet }}",
                                 role:"{{ chatMessage.senderUser.roleName }}",
-                            {%  if chatMessage.senderUser.avatar is "/"  %}
+                            {%  if chatMessage.senderUser.avatar == "/"  %}
                                 avatar: "/assets/images/noAvatar.png",
                             {%  else %}
                                 avatar: "{{ chatMessage.senderUser.avatar }}",
