Enquiry to awaiting quotation

--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/client/artist_selection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/client/artist_selection.html.twig
@@ -30,7 +30,7 @@
                     </div>
 
                     <div class="right-panel">
-                        <div class="row color-kelly available-flag text-left" v-if="order.status == 0">Enquiry</div>
+                        <div class="row color-kelly available-flag text-left" v-if="order.status == 0">Awaiting quotation</div>
                         <div class="row color-kelly available-flag text-left" v-else-if="order.status == 1">Available</div>
                         <div class="row color-kelly available-flag text-left" v-else-if="order.status == 2">Confirmed</div>
                         <div class="row color-india available-flag text-left" v-else-if="order.status == 4">Not available</div>
