--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/client/payments.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/client/payments.html.twig
@@ -30,19 +30,19 @@
 
                        <div class="col-md-12 act-info-block">
                            <!-- PERFORMANCE -->
-                           <div class="row" v-for="performance in paymentOrder.performances">
+                           <div class="row" v-for="performance in paymentOrder.performances" v-if="paymentOrder.performances && performance.data.clientSelect">
                                <div class="col-sm-2 no-pad">
                                    <div class="client-order-act-info title">${ performance.data.title }</div>
                                </div>
                                <div class="col-sm-4 no-pad">
                                    <!-- PACKAGE -->
-                                   <div class="row order-package" v-for="package in performance.data.packages">
+                                   <div class="row order-package" v-for="package in performance.data.packages" v-if="package.clientSelect">
                                        <div class="col-sm-6 no-pad">
                                            <div class="client-order-act-info description">${ package.name }</div>
                                        </div>
                                        <div class="col-sm-6 no-pad">
                                            <!-- SET -->
-                                           <div class="row" v-for="option in package.options">
+                                           <div class="row" v-for="option in package.options" v-if="option.clientSelect">
                                                <div class="col-sm-12 no-pad">
                                                    <div class="client-order-act-info time">${ option.qty } x ${ option.duration }</div>
                                                </div>
@@ -51,6 +51,29 @@
                                    </div>
                                </div>
                            </div>
+
+                           <div class="row" v-for="service in paymentOrder.services" v-if="paymentOrder.services && service.data.clientSelect">
+                               <div class="col-sm-2 no-pad">
+                                   <div class="client-order-act-info title">${ service.data.title }</div>
+                               </div>
+                               <div class="col-sm-4 no-pad">
+                                   <!-- PACKAGE -->
+                                   <div class="row order-package" v-for="package in service.data.packages" v-if="package.clientSelect">
+                                       <div class="col-sm-6 no-pad">
+                                           <div class="client-order-act-info description">${ service.name }</div>
+                                       </div>
+                                       <div class="col-sm-6 no-pad">
+                                           <!-- SET -->
+                                           <div class="row" v-for="option in package.options" v-if="option.clientSelect">
+                                               <div class="col-sm-12 no-pad">
+                                                   <div class="client-order-act-info time"></div>
+                                               </div>
+                                           </div>
+                                       </div>
+                                   </div>
+                               </div>
+                           </div>
+
                        </div>
                    </div>
 
