timing notification fix

--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
@@ -1,7 +1,7 @@
 {% include 'ActedLegalDocsBundle:Default:header.html.twig' %}
 {# dump(order.performances) #}
 <script type="text/x-template" id="timepicker-template">
-    <input type="text" class="edit-time" id="timepicker" />
+    <input type="text" class="edit-time" id="time_picker" />
 </script>
 <script type="text/javascript">
     window.getOrderId = function(){ return {{ order.id }}};
