--- a/src/Acted/LegalDocsBundle/Resources/views/Default/eventModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/eventModal.html.twig
@@ -40,7 +40,11 @@
                             </div>
                             <div class="col-lg-6 no-pad-right">
                                 <label for="event_country">Country</label>
-                                <input disabled type="text" class="form-control" id="event_country" placeholder="United Kingdom" value="United Kingdom" name="country">
+                                <select class="select_width_101" data-class="selections-white low-select" name="country" id="event_country">
+                                    <option value="United Kingdom" selected="">United Kingdom</option>
+                                    <option value="Germany">Germany</option>
+                                    <option value="France">France</option>
+                                </select>
                             </div>
                         </div>
                     </div>
