--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/client_event_details.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/client_event_details.html.twig
@@ -67,10 +67,10 @@
                     <label for="event-country">Country</label>
                     {#<input disabled type="text" class="form-control" id="event-country" placeholder="United Kingdom"
                            name="country" value="United Kingdom">#}
-                    <select class="select_width_101 enable_toggler" name="country" id="event-country">
-                        <option value="United Kingdom" v-bind:selected="event.countryId == 1" >United Kingdom</option>
-                        <option value="Germany" v-bind:selected="event.countryId == 2" >Germany</option>
-                        <option value="France" v-bind:selected="event.countryId == 3" >France</option>
+                    <select class="select_width_101 enable_toggler" name="country" id="event-country" v-on:change="countrySaveHandler">
+                        <option countryId="0" value="United Kingdom" v-bind:selected="event.countryId == 1" >United Kingdom</option>
+                        <option countryId="1" value="Germany" v-bind:selected="event.countryId == 2" >Germany</option>
+                        <option countryId="2" value="France" v-bind:selected="event.countryId == 3" >France</option>
                     </select>
                 </div>
             </div>
