--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/client/artist_selection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/client/artist_selection.html.twig
@@ -25,7 +25,7 @@
                             <li v-for="category in order.artist.categories">${category}</li>
                         </ul>
                         <div>
-                            From ${order.artist.city}
+                            From ${order.artist.city}, ${order.artist.country}
                         </div>
                     </div>
 
