--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
@@ -232,7 +232,7 @@
                     <div class="col-sm-6">
                         {% if order.status == 2 %}
                             <p class="deposit-info"><b>Deposit:</b> {{ order.depositAmount }} GBP received via secured payment <b class="non-refundable-info">(Non - refundable)</b></p>
-                            <p class="deposit-info"><b>Balance:</b> {{ order.depositBallance }} - GBP unpaid due to  <span class="color-carrot"> {{order.event.endingDate | date}}</span></p>
+                            <p class="deposit-info"><b>Balance:</b> {{ order.depositBallance }} - GBP unpaid due to  <span class="color-carrot"> {{order.event.endingDate | date('Y-M-d')}}</span></p>
                         {% elseif order.status == 0 %}
                             <p class="deposit-info"><b>Deposit:</b> 0 GBP will be paid <b class="non-refundable-info">(Non - refundable)</b></p>
                             <p class="deposit-info"><b>Balance:</b> 0 GBP will left to pay</p>
