--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/client/payments.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/client/payments.html.twig
@@ -93,7 +93,7 @@
                                    <span class="color-carrot">Balance (${paymentOrder.guaranteed_balance_term}%): ${paymentOrder.deposit_ballance} GBP unpaid</span>
                                </div>
                                <div class="col-md-5 no-pad">
-                                   <span class="color-carrot">- due to ${event.ending_date | event_date}</span>
+                                   <span class="color-carrot">- due to ${event.starting_date | event_date}</span>
                                </div>
                            </div>
                        </div>
