--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/chat-room.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/chat-room.css
@@ -67,6 +67,20 @@
     color: rgba(255, 168, 122, 1);
 }
 
+.chat-room .paymentAlert {
+    animation: smooth-blink 0.5s ease-in-out 0s infinite alternate;
+}
+
+@keyframes smooth-blink {
+	0%,
+	20% {
+		opacity: 1;
+	}
+	60%,
+	100% {
+		opacity: 0;
+	}
+}
 
 /** --- FONTS --- **/
 .chat-room label {
