--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
@@ -221,7 +221,7 @@
                         <div class="col-sm-6 col-xs-5 no-pad">
                             {% set alert = "" %}
                             {% if paymentNotify == true and is_granted('ROLE_CLIENT') and order.status > 1 %}
-                                {% set alert='paymentAlert' %}
+                                {% set alert='paymentAlert color-red' %}
                             {% endif %}
                             <p class="booking-status">Status: <b>{{ order.stringStatus }}</b></p>
 
@@ -232,7 +232,7 @@
                     <div class="col-sm-6">
                         {% if order.status == 2 %}
                             <p class="deposit-info"><b>Deposit:</b> {{ order.depositAmount }} GBP received via secured payment <b class="non-refundable-info">(Non - refundable)</b></p>
-                            <p class="deposit-info"><b>Balance:</b> {{ order.depositBallance }} - GBP unpaid due to  <span class="color-carrot {{ paymentAlert }}"> {{paymentDeadline | date('d/m/Y')}}</span></p>
+                            <p class="deposit-info"><b>Balance:</b> {{ order.depositBallance }} - GBP unpaid due to  <span class="{{ alert }}"> {{paymentDeadline | date('d/m/Y')}}</span></p>
                         {% elseif order.status == 0 %}
                             <p class="deposit-info"><b>Deposit:</b> 0 GBP will be paid <b class="non-refundable-info">(Non - refundable)</b></p>
                             <p class="deposit-info"><b>Balance:</b> 0 GBP will left to pay</p>
