Issue #4 Changing the Performance EDIT Logic FIX

--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSectionEdit.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSectionEdit.html.twig
@@ -214,9 +214,10 @@
                         <!--<button data-toggle="modal" data-target="#freeQuoteModalRegisterd" class="btn">REQUEST FREE QUOTE
                         </button>-->
                     </div>
-                    <div class="button-gradient white blue follow">
-
+                    <div class="button-gradient white follow">
+<!--
                         <button type="submit" class="btn publishOfferPerf">Publish now</button>
+                        -->
                     </div>
                 </div>
             </div>
