--- a/src/Acted/LegalDocsBundle/Resources/public/css/globals/menu.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/globals/menu.css
@@ -133,7 +133,7 @@
 }
 .dashboard.client .events-menu .event-item {
     height: 26px;
-    width: 169px;
+    width: 90%;
     border-radius: 3px;
     border-radius: 3px;
     padding: 1px 13px 6px 0px;
