--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/messages.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/messages.css
@@ -315,6 +315,23 @@
 .ui-loader.ui-corner-all.ui-body-a.ui-loader-default {
     display: none !important;
 }
+
+
+
+.checkMessages, #no-sortMessages{
+    display: none;
+}
+#sortMessagesSpinner {
+    text-align: center;
+    line-height: 390px;
+}
+#no-sortMessages{
+    text-align: center;
+    font-style: italic;
+    min-height: 390px;
+}
+
+
 @media (max-width: 1200px) {
     .message-controls .ul-reset {
         /*margin: 0 0 0 30px;*/
@@ -324,6 +341,12 @@
 @media (max-width: 991px) {
     .dialog-section {
         padding: 31px 5px;
+    }
+    #sortMessagesSpinner {
+        line-height: 190px;
+    }
+    #no-sortMessages{
+        min-height: 190px;
     }
 }
 @media (max-width: 768px) {
@@ -505,6 +528,7 @@
         height: 14px;
         width: 14px;
     }
+
 }
 
 
