--- a/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
@@ -78,14 +78,18 @@
                                     <label class="icon"></label>
                                 </div>
 
-                                <div class="controls">
+
+                            </form>
+
+                            <div class="controls">
+                                <button type="button" class="btn-back back-button">Back</button>
+
+                                <div class="wrapForButton">
                                     <div class="button-gradient filled orange">
                                         <button id="stageThreeNextCustomer" type="submit" class="btn register submit">Register Now</button>
                                     </div>
-
-                                    <button type="button" style="width: 100%; margin-top: 10px;" class="btn-back back-button">Back</button>
                                 </div>
-                            </form>
+                            </div>
                         </div>
 
                     </div>
@@ -177,7 +181,7 @@
                                 <a href="#">here</a>
                             </p>
                             <p class="description">
-                                And if you need any help, please do not hesitate to use the FAQ
+                                And if you need any help, please do not hesitate to use the <a href="#">FAQ</a>
                             </p>
 
                             <div class="controls">
